WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183981
WKFileUploadPanel shouldn't depend on WebKitLegacy
https://bugs.webkit.org/show_bug.cgi?id=183981
Summary
WKFileUploadPanel shouldn't depend on WebKitLegacy
Tim Horton
Reported
2018-03-24 02:15:58 PDT
WKFileUploadPanel shouldn't depend on WebKitLegacy
Attachments
Patch
(2.09 KB, patch)
2018-03-24 02:16 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-03-24 02:16:24 PDT
Created
attachment 336470
[details]
Patch
WebKit Commit Bot
Comment 2
2018-03-24 02:46:02 PDT
Comment on
attachment 336470
[details]
Patch Clearing flags on attachment: 336470 Committed
r229949
: <
https://trac.webkit.org/changeset/229949
>
WebKit Commit Bot
Comment 3
2018-03-24 02:46:03 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-03-24 02:47:18 PDT
<
rdar://problem/38823325
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug