WKFileUploadPanel shouldn't depend on WebKitLegacy https://bugs.webkit.org/show_bug.cgi?id=183981

Reviewed by Wenson Hsieh.

* UIProcess/ios/forms/WKFileUploadPanel.mm:
(-[WKFileUploadPanel _uploadItemForImageData:imageName:successBlock:failureBlock:]):
Just use the underlying WebCore function instead of the
unnecessary NSFileManager category method.


Canonical link: https://commits.webkit.org/199581@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229949 268f45cc-cd09-0410-ab3c-d52691b4dbfc